--- a/CongoActiveMapper.Rmd
+++ b/CongoActiveMapper.Rmd
@@ -13,21 +13,14 @@ output:
 ## Background
 
 
-
-
-
-
-
-
-
 A crop field in the congo 
 
--This project builds upon the work done on the Mapping Africa project. 
--The project seeks to implement the exsting Active Learning Framwork from Ghana to the Congo
--The project is computational powered by AWS (EC2 for compute and S3 for storage) and has a large human feedbackloop.There are four major mapping components: 
-    1) image acquisition and pre-processing
-    2) training data
-    3) machine learning
+-This project builds upon the work done on the Mapping Africa project. \n
+-The project seeks to implement the exsting Active Learning Framwork from Ghana to the Congo \n
+-The project is computational powered by AWS (EC2 for compute and S3 for storage) and has a large human feedbackloop.There are four major mapping components: \n
+    1) image acquisition and pre-processing \n
+    2) training data \n
+    3) machine learning \n
     4) segmentation 
 
 
@@ -44,11 +37,11 @@ Above is the overal AOI
 
 ---
 
-## 1 image acquisition - Noah
+## 1 Image acquisition - Noah
   -The first stage is Image acquisition
-  -This was completed using EC2 and Planet Scope Imagery.Planet Scope Satellites are box satellites provide high temporal and spatial resolution for cropland identification.
-  - Two time frames:
-     1) Dry season (December-February)
+  -This was completed using EC2 and Planet Scope Imagery.Planet Scope Satellites are box satellites provide high temporal and spatial resolution for cropland identification. \n
+  - Two time frames: \n
+     1) Dry season (December-February) \n
      2) Wet season (May - September)
   
 
@@ -69,29 +62,8 @@ Composite image on the right is growing season, and on the left is non-growing s
 ## 2 Training data collection -Priyanka and Wei Hong
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
--The images were then process in Amazon EC2, 200 training sites were randomly selected from the AOIs.
+-The images were then process in Amazon EC2, 200 training sites were randomly selected from the AOIs. \n
 -The sites are then stored in postgres. 
-
-
-
-
-
-
-
-
 
 
 
@@ -100,50 +72,22 @@ Composite image on the right is growing season, and on the left is non-growing s
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 -Settlement Locations (datafromHDX) and the buffer sights
 
  
- 
- 
 --- 
 
-##Machine learning/ (Future)
--Apart of future steps in mapping the cropland of congo
--In this stage the human / machine and machine connection is established 
+## Machine learning/ (Future)
+-In this stage the human / machine and machine connection is established \n
 -A "custom crowdsourcing platfrom" is created(Estes 8)
 
--This platfrom is called labeller wich is built around human assessors that complete tasks, includes building data for understanding accuracry and also data for tranning
-- Mapper is established for classfication 
+-This platfrom is called labeller wich is built around human assessors that complete tasks, includes building data for understanding accuracy and data training
+- Mapper is established for classfication, which uses a random forest algorithm. In this case, it has 80 trees.
 
-
-
-
-
-
-
-
-
-
-- Mapper is a random forest algorithm that has 80 trees
 
 ---
 
-##Conclusion
+## Conclusion
 -The final two steps are the active feedback loop and segmentation
 -This segmentation (field segmentation) step is powered by a meanshift algorithm (Yizong Cheng 1995) and followed up by a accuracy assessment
 -The challange of creating a automated system for cropland segmentaion in heavily forested and remote area
@@ -153,6 +97,6 @@ Composite image on the right is growing season, and on the left is non-growing s
 
 ---
 
-##Thank you
+## Thank you
  -Lyndon, Su and Lei
 
