--- a/Paper_ActiveLearning.Rmd
+++ b/Paper_ActiveLearning.Rmd
@@ -20,7 +20,7 @@ library(knitr)
 ```
 
 ## Summary
-The purpose of this project is to gain an understanding and hands-on experience of cropland classification using an active learning framework. We seek to extend the existing active learning framework developed for identifying croplands in Ghana to the Congo region. Four areas of interest _(Fig 1)_ that have recently experienced flooding were dentified by Cloud to Street for cropland detection.
+The purpose of this project is to gain an understanding and hands-on experience of cropland classification using an active learning framework. We seek to extend the existing active learning framework developed for identifying croplands in Ghana to the Congo region. Cloud to Street identified four areas of interest _(Fig 1)_ that had recently experienced flooding to Street. We aim to identify croplands in this region.
 
 ```{r, fig.align='center', echo=FALSE}
 knitr::include_graphics("images/aoi_grid.png")
@@ -37,11 +37,11 @@ There are four major components for the project:
 3. Machine Learning
 4. Segmentation
 
-Before diving into the mapping components, a server platform is required for data storage and computer processing purposes. In this project, the computer is powered by Amazon Web Services (AWS). EC2 instances are used for computation, while S3 is used for storage.  Since this active learning framework requires script running, we install the AWS Command Line Interface (CLI) to connect programming software with AWS. Github is another core platform used in this project which possesses the script storage location and repository management tool. The repositories we used for this project were imager and labeler.
+Before diving into the mapping components, a server platform is required for data storage and computational processing purposes. In this project, the computational capability is powered by Amazon Web Services (AWS). EC2 instances are used for computation, while S3 is used for storage. Since this active learning framework requires running scripts, we install the AWS Command Line Interface (CLI) to connect programming software with AWS. Github is another core platform used in this project which possesses the script storage location and repository management tool. The repositories we used for this project were imager and labeler.
 
 
 ## Image acquisition 
-All the Congo imageries of interest are extracted from PlanetScope, which yields 3-meter resolution imageries, with a daily return and four bands (R, G, B, and NIR). Planet provides high temporal(daily) and spatial resolution (3 to 4 meters), allowing the reduction of cloudy areas by filtering all of the values and therefore retrieving high-quality growing and off-season imageries. (Debats et al. 2016, Defourny et al. 2019). The imagery is broken up into the dry season (December-February) and the entire wet season (May - September) extended due to cloudiness. The images are tiled into 0.05-degree cells, and the purpose of the composting process is to create an "analysis-ready data" (ARD) product (Dwyer et al., 2018). The procedure outputs the composites to an S3 bucket. One of the challenges that occurred in this step included cloudy imagery requiring further inspection between impacted AOIs. In figure 2, (below) the Planet Scope Congo imagery for both growing season and off season is displayed.
+The imagery of interest for Congo is extracted from PlanetScope, which yields 3-meter resolution imageries, with a daily return and four bands (R, G, B, and NIR). Planet provides high temporal(daily) and spatial resolution (3 to 4 meters), allowing the reduction of cloudy areas by filtering all of the values and therefore retrieving high-quality growing and off-season imageries. (Debats et al. 2016, Defourny et al. 2019). The imagery is broken up into the dry season (December-February) and the entire wet season (May - September) extended due to cloudiness. The images are tiled into 0.05-degree cells, and the purpose of the composting process is to create an "analysis-ready data" (ARD) product (Dwyer et al., 2018). The procedure outputs the composites to an S3 bucket. One of the challenges that occurred in this step included cloudy imagery requiring further inspection between impacted AOIs. In figure 2, (below) the Planet Scope Congo imagery for both growing season and off season is displayed.
   
 ```{r, echo=FALSE, fig.align='center'}
 knitr::include_graphics(c("images/imagery.PNG"))
@@ -52,7 +52,7 @@ _Fig 2: Off Season Imagery (Top left) | Growing season Imagery (Bottom Left) | T
 
 
 ## Defining Training Sites
-Before the mapping process is initiated, training sites in the study area must be defined. Two hundred f-sites from the 0.005-degree grid were selected randomly across the four areas of interest in the Congo. The sites are stored in a Postgres table that will later be used by workers to digitize crop fields visible around the site. However, upon closer visual inspection, we noticed that many sites were located in remote forest areas or flood plain zones _(Fig 3)_ away from settlements. Training sites where croplands are not visible limits the amount of training data that can be used in the feature extraction process.
+Before the mapping process is initiated, training sites in the study area must be defined. Two hundred f-sites from the 0.005-degree grid were selected randomly across the four areas of interest in Congo. The sites are stored in a Postgres table that will later be used by workers to digitize crop fields visible around the site. However, upon closer visual inspection, we noticed that many sites were located in remote forest areas or flood plain zones _(Fig 3)_ away from settlements. Training sites where croplands are not visible limits the amount of training data that can be used in the feature extraction process.
 ```{r, echo=FALSE, fig.align='center'}
 knitr::include_graphics(c("images/examples.PNG"))
 ```
@@ -81,9 +81,8 @@ _Fig. 5: The test and portal for the training site team_
 _Figure 5_ shows an instance of a mapping qualification test for a worker before joining the mapping team. A worker needs to digitize the polygon of a crop field, if there is any, and label the digitized polygon as cropland. 
 
 ## Future Work: Machine learning 
-Before running the machine learning process, we will extract additional features from growing and off-season from PlanetScope, and those other features include reflectance values and vegetation indices, which are valuable for cropland classification. The collective subsets of PlanetScope imageries derive the blue, green, red, and near-infrared bands, mean and standard deviation of vegetation indices, and then convert those into RasterFrames, which makes it suitable for raster data.                                                    
-    Once the features from the training sites are extracted into RasterFrames, the classification process can begin. Features are combined with their corresponding labels and passed to the machine learning classifier, with the RandomForest classification.                    
-  The active learning process is initiated after fitting and model evaluation. The process serves its purposes as QA/QC by calculating the posterior probability of cropland presence and an uncertainty criterion. For the grid cell that has the highest value uncertainty criterion, that grid cell will be sent back to the mapper for workers to re-digitize new labels. The iteration of the launching of the machine learning cluster, reassessment of uncertainty criterion for the most uncertain sites, and relabelling of those sites continue until the map accuracy metrics remain constant.      
+Before running the machine learning process, we will extract additional features from the growing and off-season PlanetScope imagery, and those other features include reflectance values and vegetation indices, which are valuable for cropland classification. The collective subsets of PlanetScope images contain the blue, green, red, and near-infrared bands, mean and standard deviation of vegetation indices. They are then converted into RasterFrames, which makes it suitable for raster data. Once the features from the training sites are extracted into RasterFrames, the classification process can begin. Features are combined with their corresponding labels and are passed into the  Random forest classifier.
+The active learning process is initiated after fitting and model evaluation. The process serves its purposes as QA/QC by calculating the posterior probability of cropland presence and an uncertainty criterion. For the grid cell that has the highest value of uncertainty criterion, that grid cell will be sent back to the mapper for workers to re-digitize new labels. The iteration of launching a machine learning cluster, reassessment of uncertainty criterion for the most uncertain sites, and the re-labeling of those sites continues until the map accuracy metrics remain constant.    
 
 ## Conclusion
 Although we did not complete the whole Congo mapping project, we managed to grasp the fundamental principles and understanding of active learning. However, there were some hurdles we encountered in this project, such as accessing Amazon S3, 800 missing scenes, and an abundance of cloudy images. All of those obstacles caused a significant delay in the timeline of project completion, especially the missing and cloudy imageries, because we had to rerun the image composition to get less cloudy imagery and fill in those 800 missing scenes. 
